update front end of customer view service order component

--- a/src/app/view-customer-service-order/view-customer-service-order.component.css
+++ b/src/app/view-customer-service-order/view-customer-service-order.component.css
@@ -76,3 +76,15 @@
 .declineBtn {
   margin-right: 5px;
 }
+.bodyFont {
+  font-family: 'Bree Serif', serif;
+}
+.bodyColor {
+  color: rgb(29,89,179);
+}
+.priceFont {
+  font-family: 'Tinos', serif;
+}
+.statusFont {
+  font-family: 'Roboto Slab', serif;
+}
