--- a/src/app/customer-closed-work/customer-closed-work.component.html
+++ b/src/app/customer-closed-work/customer-closed-work.component.html
@@ -1,7 +1,7 @@
 <div class="row">
   <div class="col-md-12">
     <div class="card defaultCardStyle">
-      <h1 class="text-center headerFont fireFont"><strong>Current Services In Progress</strong></h1>
+      <h1 class="text-center headerFont"><strong>Service History</strong></h1>
       <table class="table">
         <thead class="goldBack">
           <tr>
@@ -9,25 +9,19 @@
             <th>Status</th>
             <th>Vehicle</th>
             <th>Location</th>
-            <th>Ordered</th>
-            <th>Recommended</th>
+            <th>Services</th>
             <th>Created</th>
           </tr>
         </thead>
         <tbody>
-          <tr *ngFor="let order of pendingServices" (click)="selectOrder(order._id)" class="rowStyle">
+          <tr *ngFor="let order of closedServices" (click)="selectOrder(order._id)" class="rowStyle">
             <td>{{order.cusAttendant}}</td>
             <td>{{order.status | uppercase}}</td>
             <td>{{order.cusCarMake}} {{order.cusCarModel}}, {{order.cusCarYear}}</td>
             <td>{{order.location}}</td>
             <td>
               <div *ngFor="let service of order.cusCarService">
-                <div *ngIf="service.status == 'pending' || service.status == 'complete'">{{service.type}}</div>
-              </div>
-            </td>
-            <td>
-              <div *ngFor="let recService of order.cusCarService">
-                <div *ngIf="recService.status == 'recommended'">{{recService.type}}</div>
+                <div *ngIf="service.status == 'complete'">{{service.type}}</div>
               </div>
             </td>
             <td>{{order.created_at | date:"medium"}}</td>
