--- a/src/app/customer-portal/customer-portal.component.html
+++ b/src/app/customer-portal/customer-portal.component.html
@@ -3,6 +3,7 @@
   <div class="row">
     <div class="col-md-12">
       <app-customer-pending-work></app-customer-pending-work>
+      <app-customer-closed-work></app-customer-closed-work>
     </div>
   </div>
 </div>
