--- a/src/app/customer/customer.component.html
+++ b/src/app/customer/customer.component.html
@@ -1,11 +1,15 @@
 <app-header></app-header>
 <div class="container">
   <div class="row">
-    <div class="col-md-12">
-      <h3 class='text-center'>Customer Info</h3>
-      <h5>Name: {{fullName}}</h5>
-      <h5>Phone Number: {{phoneNumber}}</h5>
-      <h5>Email: {{email}}</h5>
+    <div class="col"></div>
+    <div class="col-md-7">
+      <div class="card defaultCardStyle">
+        <h3 class='text-center headerFont headerColor'><strong>Customer Info</strong></h3>
+        <h5><span class="headerColor">Name: </span>{{fullName}}</h5>
+        <h5><span class="headerColor">Phone Number: </span>{{phoneNumber}}</h5>
+        <h5><span class="headerColor">Email: </span>{{email}}</h5>
+      </div>
     </div>
+    <div class="col"></div>
   </div>
 </div>
